syntax = "proto3";

package rocksdb;

service RocksDBService {
  rpc Put (PutRequest) returns (PutResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}
